--- a/projects/bn-ng-file-explorer/src/lib/path-breadcrumb/path-breadcrumb.component.html
+++ b/projects/bn-ng-file-explorer/src/lib/path-breadcrumb/path-breadcrumb.component.html
@@ -2,7 +2,7 @@
 
   <a href="#" *ngFor="let path of paths; let i = index;" class="u-cursor-pointer"
     (click)="navigateToPath(path,$event)">
-    {{ path.folderName }} /
+    {{ path.name }} /
   </a>
 
 </div>
