--- a/projects/bn-ng-file-explorer/src/lib/folder/folder.component.scss
+++ b/projects/bn-ng-file-explorer/src/lib/folder/folder.component.scss
@@ -5,6 +5,7 @@
   text-align: center;
   justify-content: center;
   margin: 8px;
+  cursor: pointer;
 
   & .icon {
       font-size: 45px;
@@ -43,8 +44,6 @@
   color: var(--color-primary);
   font-size: 16px;
 }
-
-
 
 .move-icon {
   left: 0;
